# pico-w-blink

blink/: Cargo.toml
blink/.cargo/: config.toml
blink/examples/: blink.rs
