[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.1.0" }
embassy-executor = { version = "0.5.0", features = [
    "defmt",
    "arch-cortex-m",      # embassy_executor::main
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1.1" }

cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.3" }

futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic", # no method named `compare_exchange` found for struct `portable_atomic::AtomicBool` in the current scope 
    "unstable",
] }
static_cell = { version = "2.0.0" }
# no method named `compare_exchange` found for struct `portable_atomic::AtomicBool` in the current scope 
portable-atomic = { version = "1.6.0", features = ["critical-section"] }

embedded-hal = { version = "1.0.0" }

defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
